# topoi

./: .gitignore  BULLSHIT.md  CONCORDIA.md  DEPLOYMENT.md  DUCK_PROMPT.md  INSTALL.md  MICROWORLD.md  ONTOLOGY.md  README.md  RELEASE.md  ROADMAP.md  add-server.clj  babashka_narya_algebraicjulia.md  bb.edn  bootstrap.sh  concordia-requirements.txt  config.edn  coq_and_lean_comparison.md  discourse_hypergraph.md  duckdb_exploration.md  duckdb_setup.md  flake.nix  install.sh  justfile  lisp_syntax_catlab_opengames.md  manage_concordia.py  pyproject.toml  run.py  test-install.clj  test_interaction.json  textual_microworld.py  user_only_queries.json  uv-advantages.md  vscode-workspace.code-workspace  zk_and_foundry_ecosystem.md
.clj-kondo/.cache/v1/clj/: manage.transit.json  random-walk-mcp-server.transit.json  random-walk.transit.json  resilient-babashka-scsh.transit.json  run.transit.json  test-tuis.transit.json  topos-db.transit.json  topos-sync.transit.json  transducer.transit.json
.continue/prompts/: topos-mcp.prompt  topos-ontology.prompt  vscode-triplet.prompt
.flox/: env.json
.lsp/.cache/: db.transit.json
.topos/: COLOR_LOGIC.md  FLIX_SCHEME_IN_3H.md  LISP_BRIDGES.md  OMEGA_THEORY.md  README.md  TUI_BENCHMARKS.md
.topos/docs/: environment-variables.md  mcp-server-config-patterns.md  pod-best-practices.md
.topos/docs/awesome-lists/: AWESOME.md
.topos/docs/examples/: REPOSITORIES.md
.topos/docs/mcp/: OVERVIEW.md
.topos/integrations/: pytest_automation_boilerplate.md  tweag_pytest_integration.md
.topos/loops/: compose.md  gmgn.md  iterate.md  wittgenstein.md
.topos/ontology/autopoiesis/: README.md
.topos/ontology/ergodicity/: README.md
.topos/ontology/topology/: README.md
.topos/sessions/: _.md  coin-flip-strategies.md  goedel-machine-analysis.md  goedel-machine-genesis.md  goedel-machine-wasm.md
bb/: README.md  capabilities_server.clj  dir_to_duckdb.clj  ducklings.clj  example_mcp_server.clj  hy-bridge.edn  hy-handler.clj  mcp_server.clj  nats-jet.clj  process.clj  pull-latest.clj  random_walk.clj  random_walk_plurigrid.clj  test-message.json  usarch_integration.clj  xenomodern.hy
legacy/: download-gay.sh  install-gay.sh
pod-babashka-mcp/: CHANGELOG.md  CONTRIBUTING.md  README.md  bb.edn  build.clj  go.mod  pod-config.edn
pod-babashka-mcp/src/bb/: mcp.clj
pod-babashka-mcp/src/bb/mcp/: config.clj
pod-babashka-mcp/src/bb/pod/babashka/: config.clj  mcp.clj
pod-babashka-mcp/src/mcp/: pod.go
pod-babashka-mcp/src/mcp/mock/: client.go  go.mod
pod-babashka-mcp/test/: duck_everything_server.clj
pod-babashka-mcp/test/pod/babashka/: mcp_duck_test.clj  mcp_everything_test.clj  mcp_test.clj
runtimes/just-world/: interpreter.py
session/: README.md  pyproject.toml
shells/topos-mcp/: default.nix
src/: db_ops.py  duck_ops.py  random-walk-mcp-server.clj  random_walk.py
src/bmorphism-mcp/: README.md
src/bmorphism-mcp/bb/: manage.clj  run.clj  topos_db.clj  topos_sync.clj
src/bmorphism-mcp/julia/: Project.toml
src/bmorphism-mcp/julia/src/: BmorphismMcp.jl  server.jl
src/bmorphism-mcp/julia/test/: runtests.jl
src/bmorphism-mcp/python/: pyproject.toml  server.py  test_server.py
src/bmorphism-mcp/typescript/: package.json  server.ts  test_server.ts  tsconfig.json
src/flex/: ClojureInterpreter.flix  ClojureInterpreterTests.flix  Environment.flix  Logo.flix  Main.flix  Parser.flix  Primitives.flix  README.md  Tui.flix  build.flix  test.flix
src/modal_mcp_server/: pyproject.toml  server.py
src/topos_mcp/: __init__.py  active_inference_diagrams.jl  client.py  color_logic.py  core.clj  curses_tui.py  emacs_frame.py  entropy_tensor.py  guile_bridge.py  hy_bridge.hy  hy_bridge.py  hypergraph.py  lang_mode.py  meta_lang.py  scheme_tui.py  server.py  time_dsl.py  tui.hy  tui.py  world_model.hy
