[project]
name = "topos-mcp"
version = "0.0.0"
description = "_"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "discopy>=1.2.0",
 "duckdb>=1.1.3",
 "jax>=0.4.38",
 "kuzu>=0.7.1",
 "lancedb>=0.18.0",
 "mcp>=1.2.0",
 "textual>=1.0.0",
 "torch-geometric>=2.6.1",
]
[[project.authors]]
name = "barton"
email = "barton@vibes.lol"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
topos-mcp = "topos_mcp:main"
