[project]
name = "topos-mcp"
version = "0.0.0"
description = "_"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "mcp-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0"
]
[[project.authors]]
name = "barton"
email = "barton@vibes.lol"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
topos = "topos_mcp.__main__:main"
topos-client = "topos_mcp.client:entry_point"
