[project]
name = "topoi"
version = "0.1.0"
description = "A postmodern exploration of concept space through entropy tensors and random walks"
authors = [
    {name = "_ Contributors"}
]
dependencies = [
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "textual>=0.27.0",
    "discopy>=0.5.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0", # For DataFrame support with DuckDB
    "pyarrow>=14.0.1", # For Parquet support
    "kuzu>=0.0.9", # Graph database
    "lancedb>=0.3.0", # Vector database
    "huggingface-hub>=0.27.1",
    "hf-transfer>=0.1.9",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=_"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_"]
