[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modal-mcp-server"
version = "0.1.0"
description = "Modal Labs MCP server for serverless cloud computing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Teglon Labs", email = "info@teglonlabs.com" }
]
copyright = "Copyright © 2025 Teglon Labs. All rights reserved."
dependencies = [
    "modal>=0.72.33",
    "fastapi>=0.115.6",
    "mcp>=1.3.0.dev0",
    "pydantic>=2.10.5",
    "tomli>=2.0.1"
]

[project.urls]
Homepage = "https://github.com/teglonlabs/modal-mcp-server"
Repository = "https://github.com/teglonlabs/modal-mcp-server.git"

[tool.hatch.build.targets.wheel]
packages = ["src/modal_mcp_server"]
