[project]
name = "bmorphism-python-mcp"
version = "0.1.0"
description = "Python implementation of Bmorphism MCP server for slowtime operations"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.24.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
